docs(v2.2): enhance roadmap with AI, sustainability, and detailed budget
Major Enhancements:
- AI PoC: TensorFlow.js template suggestions (browser-based, no server cost)
- Sustainability metrics: CO2 tracking, eco-scores, carbon offset recommendations
- Accessibility: WCAG 2.2 compliance, screen reader support
- In-app feedback: Hotjar integration for beta user insights
- CI/CD: GitHub Actions for coverage enforcement (<80% blocks merge)
- Detailed budget: €47k-€67k with breakdown and ROI justification

New Features:
- Auto-suggest templates based on past shows (AI pattern matching)
- Carbon footprint calculator for tours (train vs flight)
- Cloudflare caching for API calls (reduce costs + emissions)
- WebAuthn hardware key support (YubiKey, Touch ID)
- Complete code examples with file references

Risk Management:
- Dependencies column in priority matrix
- Contingency plans if budget exceeds €55k
- Downtime estimate: <5 minutes for migration
- Rollback plan for database changes

Budget Breakdown:
- Personnel: €34k-€49k (lead dev, contractors)
- Services: €902 (Google Places, Cloudflare, Sentry, Hotjar)
- One-time: €5.7k-€8k (translation, security audit, UX)
- Contingency: €6k-€8.7k (15% buffer)

Sustainability Focus:
- Cache Google Places results (reduce API calls)
- CO2 emissions tracking per show/tour
- Eco-score badge (A-F rating)
- Recommend low-carbon travel options
- 'Trees needed to offset' calculation

--- a/docs/V2.2_ROADMAP.md
+++ b/docs/V2.2_ROADMAP.md
@@ -25,19 +25,27 @@
 
 ### Priority 1: Security & Compliance (Critical)
 **Timeline:** Weeks 1-4  
-**Impact:** High | **Risk if delayed:** Critical
+**Impact:** High | **Risk if delayed:** Critical  
+**Dependencies:** `@simplewebauthn/browser`, `@simplewebauthn/server`, `exceljs`, Firebase Admin SDK  
+**Contingency:** If delays, focus on xlsx removal (Week 1-2) + basic MFA (Week 3-4), defer advanced MFA to v2.2.1
 
 ### Priority 2: Performance & Testing (High)
 **Timeline:** Weeks 3-8  
-**Impact:** High | **Risk if delayed:** Medium
+**Impact:** High | **Risk if delayed:** Medium  
+**Dependencies:** Vitest, Playwright, Lighthouse CI, GitHub Actions  
+**Contingency:** If budget constrained, prioritize multi-tenancy tests (critical) over E2E polish
 
 ### Priority 3: Feature Enhancements (Medium)
 **Timeline:** Weeks 5-10  
-**Impact:** Medium | **Risk if delayed:** Low
+**Impact:** Medium | **Risk if delayed:** Low  
+**Dependencies:** Google Places API (€200/mo), MapLibre GL, TensorFlow.js (AI PoC)  
+**Contingency:** If Google Places too expensive, use OpenStreetMap + Nominatim (free alternative)
 
 ### Priority 4: User Experience (Medium)
 **Timeline:** Weeks 8-12  
-**Impact:** High | **Risk if delayed:** Low
+**Impact:** High | **Risk if delayed:** Low  
+**Dependencies:** Cloudflare Pro (€20/mo), Hotjar (€31/mo), WCAG 2.2 guidelines  
+**Contingency:** If timeline tight, defer Cloudflare to v2.2.1, focus on i18n + accessibility
 
 ---
 
@@ -59,20 +67,48 @@
 **Implementation:**
 ```typescript
 // src/lib/exportToExcel.ts - Refactor
+// See existing file at: src/lib/exportToExcel.ts (created in v2.1)
 import ExcelJS from 'exceljs';
 
 export async function exportToExcel(data: any[], filename: string) {
   const workbook = new ExcelJS.Workbook();
   const worksheet = workbook.addWorksheet('Data');
   
-  // Add headers, styling, data
-  // ...
+  // Add headers with styling
+  worksheet.columns = [
+    { header: 'Date', key: 'date', width: 15 },
+    { header: 'Venue', key: 'venue', width: 30 },
+    { header: 'Fee', key: 'fee', width: 12 },
+  ];
+  
+  // Add data rows
+  data.forEach(row => worksheet.addRow(row));
+  
+  // Style header row
+  worksheet.getRow(1).font = { bold: true };
+  worksheet.getRow(1).fill = {
+    type: 'pattern',
+    pattern: 'solid',
+    fgColor: { argb: 'FF4F46E5' }, // Indigo-600
+  };
   
   const buffer = await workbook.xlsx.writeBuffer();
   const blob = new Blob([buffer], { 
     type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' 
   });
+  
+  // Use FileSaver.js (already in project)
   saveAs(blob, `${filename}.xlsx`);
+}
+
+// NEW: CSV export (faster, lighter)
+// See: src/lib/exportToCSV.ts (new file)
+import Papa from 'papaparse';
+
+export function exportToCSV(data: any[], filename: string) {
+  const csv = Papa.unparse(data);
+  const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+  saveAs(blob, `${filename}.csv`);
 }
 ```
 
@@ -201,6 +237,63 @@ Branches     : 68.2%
 Functions    : 71.8%
 Lines        : 73.9%
 ```
+
+**CI/CD Integration (GitHub Actions):**
+```yaml
+# .github/workflows/test-coverage.yml
+# Ensures coverage never drops below 80% on PRs
+name: Test Coverage
+
+on:
+  pull_request:
+    branches: [main, develop]
+  push:
+    branches: [main]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+      
+      - name: Run tests with coverage
+        run: npm run test:coverage
+      
+      - name: Check coverage threshold
+        run: |
+          COVERAGE=$(jq '.total.statements.pct' coverage/coverage-summary.json)
+          if (( $(echo "$COVERAGE < 80" | bc -l) )); then
+            echo "❌ Coverage $COVERAGE% is below 80% threshold"
+            exit 1
+          fi
+          echo "✅ Coverage: $COVERAGE%"
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/coverage-final.json
+          flags: unittests
+          fail_ci_if_error: true
+      
+      - name: Comment PR with coverage
+        uses: romeovs/lcov-reporter-action@v0.3.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          lcov-file: ./coverage/lcov.info
+```
+
+**Post-Release Coverage Protection:**
+- GitHub branch protection: Require coverage checks to pass
+- Codecov integration: Track coverage trends over time
+- PR comments: Auto-comment with coverage diff
+- Block merges if coverage drops below 80%
 
 **Focus Areas:**
 
@@ -523,14 +616,31 @@ export function VenueMap() {
 
 ```typescript
 // src/services/VenueService.ts - Google Places integration
+// See existing: src/services/FirestoreVenueService.ts (extends this)
 export class VenueService {
+  // Cache venue searches in Cloudflare for 24h (sustainability: reduce API calls)
   static async searchVenues(query: string, location: LatLng) {
+    // Check Cloudflare cache first
+    const cacheKey = `venue_search_${query}_${location.lat}_${location.lng}`;
+    const cached = await this.getFromCache(cacheKey);
+    if (cached) return cached;
+    
     // Use Google Places API
     const response = await fetch(
-      `https://maps.googleapis.com/maps/api/place/textsearch/json?query=${query}&location=${location.lat},${location.lng}&radius=50000&type=music_venue`
+      `https://maps.googleapis.com/maps/api/place/textsearch/json?query=${query}&location=${location.lat},${location.lng}&radius=50000&type=music_venue`,
+      {
+        headers: {
+          'X-Goog-Api-Key': process.env.GOOGLE_PLACES_API_KEY,
+        }
+      }
     );
     
-    return response.json();
+    const data = await response.json();
+    
+    // Cache for 24h to reduce API calls and carbon footprint
+    await this.setCache(cacheKey, data, 86400);
+    
+    return data;
   }
   
   static async autofillVenueDetails(placeId: string) {
@@ -547,11 +657,31 @@ export class VenueService {
       photos: details.photos,
     };
   }
+  
+  // Sustainability: Track API usage and carbon impact
+  static async logAPIUsage() {
+    const count = await this.getAPICallCount();
+    const carbonSaved = this.calculateCarbonSavings(count);
+    
+    // Display in org settings
+    return {
+      apiCalls: count,
+      cachedCalls: this.getCachedCount(),
+      carbonSavedKg: carbonSaved, // kg CO2
+    };
+  }
 }
 ```
 
+**Sustainability Features:**
+- [ ] Cache Google Places results in Cloudflare (24h)
+- [ ] Display "API calls saved this month" metric
+- [ ] Track carbon footprint reduction from caching
+- [ ] Badge: "Eco-Friendly Org" if >80% cache hit rate
+
 **Implementation:**
-- [ ] Integrate Google Places API (or OpenStreetMap + Nominatim)
+- [ ] Integrate Google Places API (€200/mo budget)
+- [ ] Fallback: OpenStreetMap + Nominatim (free, if budget tight)
 - [ ] Venue search with autocomplete
 - [ ] Auto-fill venue details from Places
 - [ ] Upload venue photos
@@ -561,6 +691,7 @@ export class VenueService {
 
 ```typescript
 // src/lib/travelCalculator.ts
+// Sustainability-focused: Prioritize low-carbon options
 export function calculateTravelCosts(
   fromVenue: Venue,
   toVenue: Venue,
@@ -576,31 +707,77 @@ export function calculateTravelCosts(
         duration: distance / 80, // km/h average
         cost: distance * 0.15, // €0.15/km fuel + tolls
         emissions: distance * 0.12, // kg CO2
+        ecoScore: 2, // 1-5 scale (1=best)
       };
     case 'flight':
       return {
         distance,
         duration: distance / 800 + 2, // Flight time + airport
         cost: estimateFlightCost(distance),
-        emissions: distance * 0.25,
+        emissions: distance * 0.25, // kg CO2
+        ecoScore: 5, // Worst for environment
       };
     case 'train':
       return {
         distance,
         duration: distance / 120,
         cost: estimateTrainCost(distance),
-        emissions: distance * 0.04,
+        emissions: distance * 0.04, // kg CO2 (75% less than flight)
+        ecoScore: 1, // Best option
+        recommended: true, // Badge: "♻️ Eco-Friendly"
+      };
+    case 'bus':
+      return {
+        distance,
+        duration: distance / 90,
+        cost: estimateBusCost(distance),
+        emissions: distance * 0.05, // kg CO2
+        ecoScore: 1,
+        recommended: true,
       };
   }
 }
+
+// NEW: Sustainability report for tours
+export function generateTourSustainabilityReport(tour: Tour) {
+  const totalEmissions = tour.shows.reduce((sum, show) => {
+    return sum + (show.travelEmissions || 0);
+  }, 0);
+  
+  const treesNeeded = Math.ceil(totalEmissions / 21); // 1 tree absorbs ~21kg CO2/year
+  
+  return {
+    totalEmissionsKg: totalEmissions,
+    treesToOffset: treesNeeded,
+    ecoScore: calculateEcoScore(tour), // A-F rating
+    recommendations: [
+      'Switch 3 flights to trains → Save 450kg CO2',
+      'Optimize route → Reduce 200km driving',
+    ],
+    comparison: {
+      yourTour: totalEmissions,
+      average: 1200, // kg CO2 for similar tour size
+      percentBetter: ((1200 - totalEmissions) / 1200) * 100,
+    }
+  };
+}
 ```
+
+**Sustainability Features (NEW):**
+- [ ] CO2 emissions tracking per show and tour
+- [ ] Eco-score badge (A-F) for tours
+- [ ] "Trees needed to offset" calculation
+- [ ] Recommend train over flight when possible
+- [ ] Display: "Your tour is 35% greener than average"
+- [ ] Integration with carbon offset services (optional donation)
 
 **Features:**
 - [ ] Auto-calculate distance between consecutive shows
 - [ ] Estimate travel costs (car, flight, train, bus)
-- [ ] CO2 emissions tracking
-- [ ] Route optimization: "Best order to minimize travel"
+- [ ] CO2 emissions tracking with visual charts
+- [ ] Route optimization: "Best order to minimize travel AND emissions"
 - [ ] Integration with finance module (auto-add travel expenses)
+- [ ] Sustainability report: Export CO2 metrics for ESG reporting
 
 **UI Enhancements:**
 - [ ] Venue map in Shows page
@@ -622,6 +799,89 @@ export function calculateTravelCosts(
 - Create shows one by one
 - No templates for recurring tours
 - Manual entry for similar shows
+
+**AI-Powered Template Suggestions (PoC - Week 9):**
+
+```typescript
+// src/lib/ai/templateSuggestions.ts
+// Lightweight AI using TensorFlow.js (browser-based, no server cost)
+import * as tf from '@tensorflow/tfjs';
+
+/**
+ * AI PoC: Suggest templates based on past shows
+ * Uses simple pattern matching + clustering
+ * 
+ * Example: User creates many "Festival 60min" shows
+ * → AI suggests: "Create Festival template?"
+ */
+export class TemplateSuggestor {
+  static async analyzeShows(shows: Show[]) {
+    // Extract features
+    const features = shows.map(show => [
+      show.duration || 0,
+      show.fee || 0,
+      show.capacity || 0,
+      this.encodeVenueType(show.venue?.type),
+    ]);
+    
+    // Simple K-means clustering (no training needed)
+    const clusters = await this.clusterShows(features);
+    
+    // Find common patterns
+    const suggestions = clusters
+      .filter(c => c.shows.length >= 3) // At least 3 similar shows
+      .map(c => ({
+        name: this.generateTemplateName(c),
+        confidence: c.shows.length / shows.length,
+        shows: c.shows,
+        fields: this.extractCommonFields(c.shows),
+      }));
+    
+    return suggestions;
+  }
+  
+  static generateTemplateName(cluster: Cluster) {
+    const avgDuration = average(cluster.shows.map(s => s.duration));
+    const commonVenue = mostCommon(cluster.shows.map(s => s.venue?.type));
+    
+    return `${commonVenue} ${avgDuration}min Shows`;
+    // Example: "Festival 60min Shows" or "Club 90min Shows"
+  }
+}
+
+// UI Component
+export function AITemplateSuggestions({ shows }) {
+  const [suggestions, setSuggestions] = useState([]);
+  
+  useEffect(() => {
+    TemplateSuggestor.analyzeShows(shows).then(setSuggestions);
+  }, [shows]);
+  
+  if (suggestions.length === 0) return null;
+  
+  return (
+    <Card className="border-indigo-200 bg-indigo-50">
+      <CardHeader>
+        <Sparkles className="w-5 h-5 text-indigo-600" />
+        <h3>AI Suggestions</h3>
+      </CardHeader>
+      <CardContent>
+        <p>I noticed you've created {suggestions[0].shows.length} similar shows.</p>
+        <p>Would you like to save "{suggestions[0].name}" as a template?</p>
+        <Button onClick={() => createTemplate(suggestions[0])}>
+          ✨ Create Template
+        </Button>
+      </CardContent>
+    </Card>
+  );
+}
+```
+
+**AI Benefits:**
+- **No backend cost:** Runs in browser with TensorFlow.js
+- **Privacy-friendly:** Data never leaves user's device
+- **Quick win:** Simple pattern matching, not complex ML
+- **Momentum builder:** Teases v3.0 AI features early
 
 **Template System:**
 
@@ -982,6 +1242,145 @@ export function LanguageSwitcher() {
 - PWA installable
 - Offline mode works
 - Basic haptic feedback
+
+**Accessibility Audit (WCAG 2.2 - Week 10):**
+
+```typescript
+// src/lib/accessibility/a11y.ts
+// Ensure WCAG 2.2 Level AA compliance
+
+export const a11yChecklist = {
+  // 1.4.3 Contrast (Minimum)
+  colorContrast: {
+    standard: 'AA',
+    textContrast: '4.5:1',
+    largeTextContrast: '3:1',
+    implementation: 'All text meets contrast ratios',
+  },
+  
+  // 2.1.1 Keyboard
+  keyboardNav: {
+    requirement: 'All functionality available via keyboard',
+    implementation: [
+      'Tab navigation through all interactive elements',
+      'Skip to main content link',
+      'Focus visible on all elements',
+      'Escape closes modals',
+    ],
+  },
+  
+  // 2.4.3 Focus Order
+  focusOrder: {
+    requirement: 'Logical focus order',
+    implementation: 'Focus follows visual reading order',
+  },
+  
+  // 4.1.2 Name, Role, Value
+  ariaLabels: {
+    requirement: 'All interactive elements have accessible names',
+    implementation: [
+      'All buttons have aria-label or visible text',
+      'Form inputs have associated labels',
+      'Icons have aria-hidden or labels',
+    ],
+  },
+  
+  // NEW in WCAG 2.2: 2.4.11 Focus Not Obscured
+  focusNotObscured: {
+    requirement: 'Focused elements not hidden by sticky headers',
+    implementation: 'Scroll focused elements into view',
+  },
+  
+  // NEW in WCAG 2.2: 3.2.6 Consistent Help
+  consistentHelp: {
+    requirement: 'Help mechanisms in consistent locations',
+    implementation: '? icon always in bottom-right',
+  },
+};
+
+// Screen reader support for Timeline
+export function TimelineActivityA11y({ activity }) {
+  return (
+    <div
+      role="article"
+      aria-label={`${activity.user} ${activity.action} ${activity.target} at ${activity.timestamp}`}
+    >
+      <span aria-live="polite" aria-atomic="true">
+        {formatActivityForScreenReader(activity)}
+      </span>
+    </div>
+  );
+}
+
+// Example: "Sergi Recio created show Paris - Le Trianon 2 hours ago"
+function formatActivityForScreenReader(activity: Activity) {
+  return `${activity.user} ${activity.action} ${activity.target} ${formatRelativeTime(activity.timestamp)}`;
+}
+```
+
+**Accessibility Implementations:**
+- [ ] Screen reader testing (NVDA, JAWS, VoiceOver)
+- [ ] Keyboard navigation audit (all features accessible)
+- [ ] Color contrast fixes (WCAG AA minimum)
+- [ ] Focus management (modals, dropdowns)
+- [ ] Skip links ("Skip to main content")
+- [ ] ARIA labels for all interactive elements
+- [ ] Live regions for dynamic content (Timeline updates)
+- [ ] High contrast mode support
+
+**Tools:**
+- [ ] axe DevTools (automated accessibility testing)
+- [ ] Lighthouse accessibility audit (target: 100 score)
+- [ ] Manual testing with screen readers
+- [ ] Keyboard-only navigation testing
+
+**In-App Feedback Integration (Hotjar - Week 11):**
+
+```typescript
+// src/lib/feedback/hotjar.ts
+// Track user behavior and gather feedback
+
+export function initHotjar() {
+  if (process.env.NODE_ENV !== 'production') return;
+  
+  // Hotjar tracking code
+  (function(h,o,t,j,a,r){
+    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+    h._hjSettings={hjid: process.env.VITE_HOTJAR_ID, hjsv:6};
+    // ... standard Hotjar script
+  })(window,document);
+}
+
+// Trigger feedback widgets contextually
+export function showFeedbackWidget(context: string) {
+  // After user completes major task
+  if (window.hj) {
+    window.hj('trigger', `feedback_${context}`);
+  }
+}
+
+// Examples:
+// - After creating first show: "How was the experience?"
+// - After using templates: "Did templates save you time?"
+// - After MFA setup: "Was MFA setup easy?"
+```
+
+**Feedback Loop Integration:**
+- [ ] Hotjar heatmaps (see where users click)
+- [ ] Session recordings (watch user flows)
+- [ ] Feedback widgets after key actions
+- [ ] Net Promoter Score (NPS) surveys
+- [ ] In-app bug reporting ("Shake to report")
+
+**Beta Feedback Schedule:**
+```
+Week 2: Initial security features → Survey #1
+Week 4: Performance improvements → Hotjar heatmaps review
+Week 6: Venue management → Survey #2
+Week 8: Templates + offline → Feedback widget
+Week 10: i18n + mobile → Survey #3
+Week 12: Final NPS survey + testimonials
+```
 
 **Enhanced Mobile Experience:**
 
@@ -1483,6 +1882,7 @@ exportToCSV(data, 'filename'); // NEW: Faster, lighter
 #### New Firestore Collections
 ```typescript
 // audit_logs (NEW)
+// See: firestore.rules for security rules
 {
   id: string;
   organizationId: string;
@@ -1497,6 +1897,7 @@ exportToCSV(data, 'filename'); // NEW: Faster, lighter
 }
 
 // show_templates (NEW)
+// See: src/types/template.ts for TypeScript interface
 {
   id: string;
   organizationId: string;
@@ -1509,6 +1910,7 @@ exportToCSV(data, 'filename'); // NEW: Faster, lighter
 }
 
 // tour_templates (NEW)
+// See: src/types/tour.ts for TypeScript interface
 {
   id: string;
   organizationId: string;
@@ -1519,16 +1921,86 @@ exportToCSV(data, 'filename'); // NEW: Faster, lighter
   createdBy: string;
   createdAt: Timestamp;
 }
+
+// sustainability_metrics (NEW - Eco-friendly tracking)
+// See: src/types/sustainability.ts
+{
+  id: string;
+  organizationId: string;
+  month: string; // "2026-01"
+  metrics: {
+    totalEmissionsKg: number;
+    apiCallsSaved: number; // Via caching
+    carbonSavedKg: number;
+    ecoScore: 'A' | 'B' | 'C' | 'D' | 'F';
+    trainOverFlight: number; // Count
+    treesNeededToOffset: number;
+  };
+  tours: {
+    tourId: string;
+    emissions: number;
+    ecoScore: string;
+  }[];
+  updatedAt: Timestamp;
+}
 ```
 
 **Migration Script:**
 ```bash
+# scripts/migrate-v2.2.mjs
 # Run after v2.2 deployment
 npm run migrate:v2.2
 
-# Creates new collections
-# Indexes audit_logs by organizationId + timestamp
-# Backfills existing data (optional)
+# What it does:
+# 1. Creates new Firestore collections (audit_logs, templates, sustainability)
+# 2. Adds composite indexes for queries
+# 3. Migrates existing data (optional, can skip for clean start)
+# 4. Validates security rules
+# 5. Tests new collections with sample data
+
+# Estimated downtime: <5 minutes
+# - Collections created: ~30 seconds
+# - Indexes deployed: ~2 minutes
+# - Validation: ~1 minute
+# - Buffer: ~90 seconds
+
+# Rollback plan:
+# - Keep v2.1 collections intact
+# - New collections optional (won't break existing features)
+# - Can delete new collections if issues arise
+```
+
+**Firestore Indexes (firestore.indexes.json):**
+```json
+{
+  "indexes": [
+    {
+      "collectionGroup": "audit_logs",
+      "queryScope": "COLLECTION",
+      "fields": [
+        {"fieldPath": "organizationId", "order": "ASCENDING"},
+        {"fieldPath": "timestamp", "order": "DESCENDING"}
+      ]
+    },
+    {
+      "collectionGroup": "sustainability_metrics",
+      "queryScope": "COLLECTION",
+      "fields": [
+        {"fieldPath": "organizationId", "order": "ASCENDING"},
+        {"fieldPath": "month", "order": "DESCENDING"}
+      ]
+    }
+  ]
+}
+```
+
+**Deployment Command:**
+```bash
+# Deploy indexes (no downtime)
+firebase deploy --only firestore:indexes
+
+# Deploy rules (< 1 second downtime)
+firebase deploy --only firestore:rules
 ```
 
 ---
@@ -1553,35 +2025,118 @@ npm run migrate:v2.2
 
 ## 👥 Team & Resources
 
-### Development Team
+**Core Team:**
 ```
-Lead Developer: Sergi Recio
-Frontend: 1-2 developers (contract)
-Backend: 1 developer (Firebase, API)
-QA/Testing: 1 tester + automated tests
-DevOps: 1 engineer (Cloudflare, monitoring)
+Lead Developer: Sergi Recio (full-time, 12 weeks)
+  - Architecture, code review, deployment
+  - Estimated: €15,000 - €20,000
+
+Frontend Developers: 1-2 contractors (part-time, 8 weeks)
+  - UI components, tests, accessibility
+  - Estimated: €8,000 - €12,000 (€50/hour × 160-240 hours)
+
+Backend/Firebase Developer: 1 contractor (part-time, 6 weeks)
+  - Firestore optimization, API integrations
+  - Estimated: €5,000 - €8,000 (€50/hour × 100-160 hours)
+
+QA/Testing Engineer: 1 contractor (part-time, 6 weeks)
+  - Manual testing, E2E scenarios, accessibility
+  - Estimated: €4,000 - €6,000 (€40/hour × 100-150 hours)
+
+DevOps Engineer: 1 contractor (as-needed, 2 weeks)
+  - Cloudflare setup, CI/CD, monitoring
+  - Estimated: €2,000 - €3,000 (€60/hour × 30-50 hours)
 ```
 
-### External Resources
+**External Resources:**
 ```
 i18n Translators: 4 native speakers (FR, DE, IT, PT)
+  - 699-798 keys per language × 4 languages
+  - Professional translation: €0.12/word
+  - Estimated: €2,000 - €2,500
+
 Security Auditor: External audit after v2.2
-Beta Testers: 50-100 users
-UX Feedback: 10-20 power users
+  - Penetration testing, code review, compliance
+  - Estimated: €3,000 - €4,000
+
+Beta Testers: 50-100 users (unpaid, early access incentive)
+  - NPS surveys, feedback sessions
+  - Cost: €0 (time investment only)
+
+UX Consultant: 1 expert (2 sessions)
+  - Accessibility audit, design review
+  - Estimated: €500 - €1,000 (€250/hour × 2-4 hours)
 ```
 
-### Budget Estimate
-```
-Development (3 months): €30,000 - €50,000
-External Services:
-  - Google Places API: €200/month
-  - Cloudflare Pro: €20/month
-  - Sentry Business: €50/month
-  - Translation: €2,000 (one-time)
-  - Security Audit: €3,000 (one-time)
+### Budget Breakdown (Detailed)
 
-Total: €35,000 - €55,000
+**Personnel Costs:**
 ```
+Lead Developer:           €15,000 - €20,000
+Frontend Developers:      €8,000  - €12,000
+Backend Developer:        €5,000  - €8,000
+QA Engineer:              €4,000  - €6,000
+DevOps Engineer:          €2,000  - €3,000
+                         ────────────────────
+Subtotal (Personnel):     €34,000 - €49,000
+```
+
+**External Services (Recurring):**
+```
+Google Places API:        €200/month × 3 = €600
+Cloudflare Pro:           €20/month × 3 = €60
+Sentry Business:          €50/month × 3 = €150
+Hotjar Plus:              €31/month × 2 = €62  (Weeks 10-12 only)
+Codecov Pro:              €10/month × 3 = €30  (CI coverage tracking)
+                         ────────────────────
+Subtotal (Services):      €902
+```
+
+**One-Time Costs:**
+```
+Translation (FR/DE/IT/PT): €2,000 - €2,500
+Security Audit:            €3,000 - €4,000
+UX Consultant:             €500   - €1,000
+AI/ML Tools (TF.js, libs): €0     (open source)
+Design Assets (icons, etc): €200  - €500
+                          ────────────────────
+Subtotal (One-Time):       €5,700 - €8,000
+```
+
+**Contingency Buffer (15%):**
+```
+Personnel:                 €5,100  - €7,350
+Services/One-Time:         €990    - €1,335
+                          ────────────────────
+Subtotal (Contingency):    €6,090  - €8,685
+```
+
+**TOTAL BUDGET:**
+```
+Best Case:   €34,000 + €902 + €5,700 + €6,090  = €46,692
+Worst Case:  €49,000 + €902 + €8,000 + €8,685  = €66,587
+
+Target Range: €47,000 - €67,000
+```
+
+**Budget Optimization Strategies:**
+
+If budget exceeds €55,000:
+1. **Reduce scope:** Defer Cloudflare CDN to v2.2.1 (save €60 + setup time)
+2. **Use free alternatives:** OpenStreetMap instead of Google Places (save €600)
+3. **Reduce contractors:** 1 frontend dev instead of 2 (save €4,000-€6,000)
+4. **Defer features:** Move AI PoC and sustainability metrics to v2.2.1
+
+If budget is tight (<€40,000):
+- **Priority 1 only:** Security + basic testing (Weeks 1-6)
+- **Defer to v2.2.1:** Venue management, templates, i18n completion
+- **Use open-source:** All free alternatives (OSM, no Hotjar, etc.)
+
+**ROI Justification:**
+- **Risk reduction:** Zero High vulnerabilities prevents potential breaches
+- **User acquisition:** Complete i18n opens FR/DE/IT/PT markets (4x TAM)
+- **Efficiency gains:** Templates save 50% time → 2x more tours managed
+- **Competitive edge:** AI features differentiate from competitors
 
 ---
 
