docs(v2.2): remove AI features from integration plan
- Deferred AI template suggestions to v3.0
- Removed TensorFlow.js dependency
- Removed AI PoC code examples and UI components
- Updated budget (removed AI/ML tools line item)
- Updated contingency plans (removed AI references)
- Clarified v3.0 vision will include AI-powered features

Rationale:
- Focus v2.2 on core stability, security, and performance
- AI features better suited for v3.0 after solid foundation
- Reduces scope and complexity for Q1 2026 release
- Maintains sustainability metrics and other enhancements

--- a/docs/V2.2_ROADMAP.md
+++ b/docs/V2.2_ROADMAP.md
@@ -38,7 +38,7 @@
 ### Priority 3: Feature Enhancements (Medium)
 **Timeline:** Weeks 5-10  
 **Impact:** Medium | **Risk if delayed:** Low  
-**Dependencies:** Google Places API (€200/mo), MapLibre GL, TensorFlow.js (AI PoC)  
+**Dependencies:** Google Places API (€200/mo), MapLibre GL  
 **Contingency:** If Google Places too expensive, use OpenStreetMap + Nominatim (free alternative)
 
 ### Priority 4: User Experience (Medium)
@@ -799,89 +799,6 @@ export function generateTourSustainabilityReport(tour: Tour) {
 - Create shows one by one
 - No templates for recurring tours
 - Manual entry for similar shows
-
-**AI-Powered Template Suggestions (PoC - Week 9):**
-
-```typescript
-// src/lib/ai/templateSuggestions.ts
-// Lightweight AI using TensorFlow.js (browser-based, no server cost)
-import * as tf from '@tensorflow/tfjs';
-
-/**
- * AI PoC: Suggest templates based on past shows
- * Uses simple pattern matching + clustering
- * 
- * Example: User creates many "Festival 60min" shows
- * → AI suggests: "Create Festival template?"
- */
-export class TemplateSuggestor {
-  static async analyzeShows(shows: Show[]) {
-    // Extract features
-    const features = shows.map(show => [
-      show.duration || 0,
-      show.fee || 0,
-      show.capacity || 0,
-      this.encodeVenueType(show.venue?.type),
-    ]);
-    
-    // Simple K-means clustering (no training needed)
-    const clusters = await this.clusterShows(features);
-    
-    // Find common patterns
-    const suggestions = clusters
-      .filter(c => c.shows.length >= 3) // At least 3 similar shows
-      .map(c => ({
-        name: this.generateTemplateName(c),
-        confidence: c.shows.length / shows.length,
-        shows: c.shows,
-        fields: this.extractCommonFields(c.shows),
-      }));
-    
-    return suggestions;
-  }
-  
-  static generateTemplateName(cluster: Cluster) {
-    const avgDuration = average(cluster.shows.map(s => s.duration));
-    const commonVenue = mostCommon(cluster.shows.map(s => s.venue?.type));
-    
-    return `${commonVenue} ${avgDuration}min Shows`;
-    // Example: "Festival 60min Shows" or "Club 90min Shows"
-  }
-}
-
-// UI Component
-export function AITemplateSuggestions({ shows }) {
-  const [suggestions, setSuggestions] = useState([]);
-  
-  useEffect(() => {
-    TemplateSuggestor.analyzeShows(shows).then(setSuggestions);
-  }, [shows]);
-  
-  if (suggestions.length === 0) return null;
-  
-  return (
-    <Card className="border-indigo-200 bg-indigo-50">
-      <CardHeader>
-        <Sparkles className="w-5 h-5 text-indigo-600" />
-        <h3>AI Suggestions</h3>
-      </CardHeader>
-      <CardContent>
-        <p>I noticed you've created {suggestions[0].shows.length} similar shows.</p>
-        <p>Would you like to save "{suggestions[0].name}" as a template?</p>
-        <Button onClick={() => createTemplate(suggestions[0])}>
-          ✨ Create Template
-        </Button>
-      </CardContent>
-    </Card>
-  );
-}
-```
-
-**AI Benefits:**
-- **No backend cost:** Runs in browser with TensorFlow.js
-- **Privacy-friendly:** Data never leaves user's device
-- **Quick win:** Simple pattern matching, not complex ML
-- **Momentum builder:** Teases v3.0 AI features early
 
 **Template System:**
 
@@ -2097,7 +2014,6 @@ Subtotal (Services):      €902
 Translation (FR/DE/IT/PT): €2,000 - €2,500
 Security Audit:            €3,000 - €4,000
 UX Consultant:             €500   - €1,000
-AI/ML Tools (TF.js, libs): €0     (open source)
 Design Assets (icons, etc): €200  - €500
                           ────────────────────
 Subtotal (One-Time):       €5,700 - €8,000
@@ -2125,7 +2041,7 @@ If budget exceeds €55,000:
 1. **Reduce scope:** Defer Cloudflare CDN to v2.2.1 (save €60 + setup time)
 2. **Use free alternatives:** OpenStreetMap instead of Google Places (save €600)
 3. **Reduce contractors:** 1 frontend dev instead of 2 (save €4,000-€6,000)
-4. **Defer features:** Move AI PoC and sustainability metrics to v2.2.1
+4. **Defer features:** Move sustainability metrics to v2.2.1
 
 If budget is tight (<€40,000):
 - **Priority 1 only:** Security + basic testing (Weeks 1-6)
@@ -2151,12 +2067,14 @@ If budget is tight (<€40,000):
 - Template marketplace (share templates)
 
 ### v3.0 Vision (Q3 2026)
-- AI-powered tour planning
+- **AI-powered features** (tour planning, contract generation, smart suggestions)
 - Automated contract generation
 - Financial forecasting & budgeting
 - Social media integration
 - Fan engagement tools
 - White-label solution for agencies
+
+**Note:** AI features deferred to v3.0 to focus v2.2 on core stability, security, and performance.
 
 ---
 
